@@ -2286,9 +2286,10 @@ The Solaris kstat processor group name that was used to build this Group object.
  the attribute may be attached to the highest bridge
  (i.e. the first object that actually appears below the physical slot).
 </dd>
-<dt>Vendor, AssetTag, PartNumber, DeviceLocation, BankLocation (MemoryModule Misc objects)</dt>
+<dt>Vendor, AssetTag, PartNumber, DeviceLocation, BankLocation, FormFactor, Type, Size, Rank (MemoryModule Misc objects)</dt>
 <dd>
 Information about memory modules (DIMMs) extracted from SMBIOS.
+Size is in KiB.
 </dd>
 </dl>
 
