@@ -24,6 +24,8 @@ Version 2.10.0
     which PCI device implements which window.
   + Ignore buggy memory-side caches and memory attributes when fake NUMA
     emulation is enabled on the Linux kernel command-line.
+  + Add more info attributes in MemoryModule Misc objects,
+    thanks to Zubiao Xiong for the patch.
 * x86 backend
   + Add support for new AMD CPUID leaf 0x80000026 for better detection
     of Core Complex and Die on Zen4 processors.
